[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/player2.svg" type="Texture" id=3]
[ext_resource path="res://assets/player3.svg" type="Texture" id=4]
[ext_resource path="res://Characters.gd" type="Script" id=5]
[ext_resource path="res://store.gd" type="Script" id=6]
[ext_resource path="res://Label.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 3
outline_color = Color( 0.0980392, 0.607843, 0.0823529, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.368627, 0.235294, 0.0313726, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.407843, 0.537255, 0.184314, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.690196, 0.631373, 0.12549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0

[sub_resource type="Theme" id=5]
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 2 )
TabContainer/styles/tab_bg = SubResource( 3 )
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = SubResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.709804, 0.709804, 1 )

[node name="header" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 38.0
margin_right = 92.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "STORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cash" type="Label" parent="."]
margin_left = 32.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 60.0
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 146.0
theme = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Characters" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 34.0
margin_right = -10.0
margin_bottom = -10.0
script = ExtResource( 5 )

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Characters"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control" type="Node2D" parent="TabContainer/Characters/RichTextLabel"]

[node name="Panel1" type="Panel" parent="TabContainer/Characters/RichTextLabel/control"]
margin_left = 26.4437
margin_top = 5.17157
margin_right = 270.444
margin_bottom = 359.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="TabContainer/Characters/RichTextLabel/control/Panel1"]
position = Vector2( 129.227, 159.453 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="TabContainer/Characters/RichTextLabel/control/Panel1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -87.0
margin_right = 100.0
margin_bottom = -40.0
text = "Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="TabContainer/Characters/RichTextLabel/control"]
margin_left = 314.444
margin_top = 5.17157
margin_right = 558.444
margin_bottom = 359.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="TabContainer/Characters/RichTextLabel/control/Panel2"]
position = Vector2( 129.227, 159.453 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="TabContainer/Characters/RichTextLabel/control/Panel2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -87.0
margin_right = 100.0
margin_bottom = -40.0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Characters/RichTextLabel/control/Panel2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 32.0
margin_right = 20.0
margin_bottom = 46.0
text = "price: "
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
price = 10

[node name="Panel3" type="Panel" parent="TabContainer/Characters/RichTextLabel/control"]
margin_left = 610.444
margin_top = 5.17157
margin_right = 854.444
margin_bottom = 359.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Sprite" parent="TabContainer/Characters/RichTextLabel/control/Panel3"]
position = Vector2( 129.227, 159.453 )
texture = ExtResource( 4 )

[node name="Button" type="Button" parent="TabContainer/Characters/RichTextLabel/control/Panel3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -100.0
margin_top = -87.0
margin_right = 100.0
margin_bottom = -40.0
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Characters/RichTextLabel/control/Panel3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 32.0
margin_right = 20.0
margin_bottom = 46.0
text = "price: "
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
price = 20

[node name="Panel4" type="Panel" parent="TabContainer/Characters/RichTextLabel/control"]
margin_left = 906.444
margin_top = 5.17157
margin_right = 1150.44
margin_bottom = 359.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="TabContainer/Characters/RichTextLabel/control"]
margin_left = 1186.44
margin_top = 5.17157
margin_right = 1430.44
margin_bottom = 359.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HScrollBar" type="HScrollBar" parent="TabContainer/Characters"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -25.0
max_value = 500.0
page = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TabContainer/Characters"]
visible = false
margin_left = 175.503
margin_top = -50.1439
margin_right = 830.503
margin_bottom = 290.856
color = Color( 0, 0, 0, 0.741176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TabContainer/Characters/ColorRect"]
margin_top = 16.0
margin_right = 654.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 6 )
text = "Hi"
align = 1

[node name="Button" type="Button" parent="TabContainer/Characters/ColorRect"]
margin_left = 264.822
margin_top = 209.977
margin_right = 391.822
margin_bottom = 278.977
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapons" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 34.0
margin_right = -10.0
margin_bottom = -10.0

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/weapons"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -16.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TabContainer/Characters/RichTextLabel/control/Panel1/Button" to="TabContainer/Characters" method="_on_Button1_pressed"]
[connection signal="pressed" from="TabContainer/Characters/RichTextLabel/control/Panel2/Button" to="TabContainer/Characters" method="_on_Button2_pressed"]
[connection signal="pressed" from="TabContainer/Characters/RichTextLabel/control/Panel3/Button" to="TabContainer/Characters" method="_on_Button3_pressed"]
[connection signal="pressed" from="TabContainer/Characters/ColorRect/Button" to="TabContainer/Characters" method="_on_Button_pressed"]
